--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+
 * {
   color: white;
   --black-font--: #58585800;
+  --primary: #51396a;
+  --light: #ece1f6;
+  font-family: "Anton", sans-serif;
 }
 
 body {
@@ -13,6 +18,7 @@ body {
   );
 }
 
+/* Mobile */
 @media only screen and (max-width: 390px) {
   body {
     background: radial-gradient(
@@ -25,6 +31,7 @@ body {
   }
 }
 
+/* Desktop */
 @media only screen and (min-width: 1400px) {
   body {
     background: radial-gradient(
