--- a/app/components/button.module.css
+++ b/app/components/button.module.css
@@ -17,15 +17,15 @@
   content: "";
   background: linear-gradient(
     45deg,
-    #5a27d0,
-    #6b39de,
-    #7700ff,
-    #5d00ff,
-    #cc00ff,
-    #8400ff,
-    #7a00ff,
-    #cc00ff,
-    #9000ff
+    #d09227,
+    #deaa39,
+    #ffae00,
+    #ff9500,
+    #ffea00,
+    #f6ff00,
+    #ffa200,
+    #ff9500,
+    #ffa200
   );
   position: absolute;
   top: -2px;
