style: update input styling

--- a/app/utilities/_elements.scss
+++ b/app/utilities/_elements.scss
@@ -1,9 +1,9 @@
 @use "./variables" as var;
 
 // General heading styles for the current image begin viewed and previous images.
-%headingStyles {
-  // font-family: ;
-}
+// %headingStyles {
+//   // font-family: ;
+// }
 
 %buttonStyles {
   all: unset;
