feat: add chevron at the bottom of the list to show more previous imgages. 8 are shown on first render and 4 thereafter

--- a/app/components/Logo/Logo.module.scss
+++ b/app/components/Logo/Logo.module.scss
@@ -1,5 +1,7 @@
 @use "../../utilities/variables" as var;
 
+// Test import right here instead.
+
 .logo {
   span {
     font-family: var.$logo-font-family;
