--- a/app/components/GeneratedImages.module.scss
+++ b/app/components/GeneratedImages.module.scss
@@ -18,7 +18,7 @@
   opacity: 0.5;
   cursor: pointer;
 }
-.chevron {
+.chevronDown {
   position: relative;
   text-align: center;
   margin-bottom: 6px;
@@ -27,7 +27,7 @@
   border-radius: 10px;
   // border: solid black;
 }
-.chevron:before {
+.chevronDown:before {
   content: "";
   position: absolute;
   top: 0;
@@ -37,7 +37,7 @@
   background: var.$off-gold;
   transform: skew(0deg, 20deg);
 }
-.chevron:after {
+.chevronDown:after {
   content: "";
   position: absolute;
   top: 0;
