--- a/app/components/GeneratedImages.module.scss
+++ b/app/components/GeneratedImages.module.scss
@@ -18,13 +18,15 @@
   opacity: 0.5;
   cursor: pointer;
 }
-.chevronDown {
+.chevronDown,
+.chevronUp {
   position: relative;
   text-align: center;
   margin-bottom: 6px;
   height: 0.8rem;
   width: 4rem;
   border-radius: 10px;
+
   // border: solid black;
 }
 .chevronDown:before {
@@ -46,4 +48,25 @@
   width: 50%;
   background: var.$off-gold;
   transform: skew(0deg, -20deg);
+}
+
+.chevronUp:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 51%;
+  background: var.$off-gold;
+  transform: skew(0deg, -20deg);
+}
+.chevronUp:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 50%;
+  background: var.$off-gold;
+  transform: skew(0deg, 20deg);
 }
