--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,7 +1,13 @@
+@use "./utilities/elements";
+
 .container > img {
   max-width: 100%;
   max-height: 100%;
 }
 .container {
   display: flex;
+}
+
+.heading {
+  @extend %headingStyles;
 }
