--- a/app/utilities/_elements.scss
+++ b/app/utilities/_elements.scss
@@ -1,9 +1,10 @@
 @use "./variables" as var;
 
 // General heading styles for the current image begin viewed and previous images.
-// %headingStyles {
-//   // font-family: ;
-// }
+%headingStyles {
+  font-size: var.$heading-size;
+  font-weight: var.$bold-text;
+}
 
 %buttonStyles {
   all: unset;
