--- a/app/utilities/_variables.scss
+++ b/app/utilities/_variables.scss
@@ -50,3 +50,6 @@ $button-border-width: 3px;
 // Font Families
 $logo-font-family: "SF Wonder Comic Inline", sans-serif;
 $general-font-family: "Cousine", sans-serif;
+
+//Shadow
+$div-shodow: 0 0 10px 1px rgb(202, 202, 202);
