feat: add footer icons

--- a/app/global.scss
+++ b/app/global.scss
@@ -2,4 +2,5 @@
 * {
   // The font family everywhere is the same. Except, the button(s).
   font-family: var.$general-font-family;
+  padding: 0;
 }
