--- a/app/utilities/_elements.scss
+++ b/app/utilities/_elements.scss
@@ -15,3 +15,13 @@
   padding: var.$button-padding;
   border-width: var.$button-border-width;
 }
+
+%wideButtonStyles {
+  justify-content: center;
+  display: flex;
+  padding: 0.8em 0.4rem 0.4rem 0.4rem;
+  margin-top: 1rem;
+  border-radius: 5px;
+  background-color: var.$very-light-blue;
+  box-shadow: var.$div-shodow;
+}
