--- a/app/components/Footer/Footer.module.scss
+++ b/app/components/Footer/Footer.module.scss
@@ -6,7 +6,10 @@
   width: 100%;
   margin-bottom: 2rem;
   a {
-    color: var.$violet;
+    color: var.$dark-blue;
+  }
+  a:hover {
+    opacity: 0.5;
   }
 }
 
