--- a/app/utilities/_variables.scss
+++ b/app/utilities/_variables.scss
@@ -53,3 +53,4 @@ $general-font-family: "Cousine", sans-serif;
 
 //Shadow
 $div-shodow: 0 0 10px 1px rgb(202, 202, 202);
+$text-shad: 1px 1px 0px #ff0000;
